<resources>
    <string name="app_name">thriftify</string>
    <string name="login">Login</string>
    <string name="invalid_password">Password is invalid!\nMust contain at least 1 number\nAt least 1 letter\nBe at least 8 characters long</string>
    <string name="invalid_email">Please enter valid email address</string>
    <string name="required">*Required Field</string>
    <string name="email_label">Email</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="password_confirm_label">Re-Enter Password</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="title_label">Title</string>
    <string name="price_label">Price</string>
    <string name="description_label">Description</string>
    <string name="sign_up_prompt">Don\'t have an account yet? Sign Up</string>
    <string name="sign_up_failed">Sign-up attempt failed!</string>
    <string name="sign_up_success">User created!</string>
    <string name="go_to_login_prompt">Already have an account? Login</string>
    <string name="progress_msg">Login in progress\u2026</string>
    <string name="sign_in_issue">There was an issue signing in</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="sign_in_prompt">Already have an account? Login</string>
    <string name="profile">My Profile</string>
    <string name="chat">Chat</string>
    <string name="drawer_item_categories">Categories</string>
    <string name="drawer_item_post_item">Post Item</string>
    <string name="drawer_item_messages">Messages</string>
    <string name="drawer_item_my_account">My Account</string>
    <string name="drawer_item_log_out">Log Out</string>
    <string name="review_label">Reviews</string>
    <string name="no_reviews">This user has not been reviewed yet</string>
    <string name="more">More&#8230;</string>
    <string name="contact">Contact</string>
    <string name="friend">Friend</string>
    <string name="report">Report</string>
    <string name="full_name">Full name</string>
    <string name="member_since">Noob</string>>
    <string name="phone_number">Phone number</string>
    <string name="zipcode">Zip code</string>
    <string name="upload_photo">Upload Pic</string>
    <string name="save">Save</string>
    <string name="photos">Photos</string>
    <string name="edit">(Edit)</string>
    <string name="register_link">Don\'t have an account? Sign Up</string>
    <string name="post_item_title">Post An Item</string>
    <string name="default_button">Default</string>
    <string name="delete_button">Delete</string>
    <string name="post_item_button">Post Item</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="title_activity_maps">Map</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_send">Send</string>
    <string name="sample_message">Real thrifty!</string>
    <string name="no_chats">You have no messages.</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_maps2">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="google_maps_key">AIzaSyDNH7Jf1jTAwAWvRbM5ygogiA7gJ3kVsUs</string>
</resources>
