<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_menu"
        android:title="@string/menu"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@drawable/ic_menu">

        <menu>

            <item android:id="@+id/action_user_profile"
                  android:icon="@drawable/ic_account"
                  app:showAsAction="ifRoom"
                  android:title="@string/profile" />

            <item android:id="@+id/action_chat"
                  android:icon="@drawable/ic_chat"
                  app:showAsAction="ifRoom"
                  android:title="@string/chat" />

        </menu>

    </item>

</menu>
