<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.01">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="165dp"
                android:layout_height="150dp"
                android:contentDescription="@string/profile"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                app:srcCompat="@drawable/profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/screen_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:ems="10"
                    android:enabled="false"/>
                <TextView
                    android:id="@+id/user_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary"
                    android:textSize="12sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="EditUser"
                    android:text="@string/edit"
                    android:ems="10"/>
                <TextView
                    android:id="@+id/member_lifetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/member_since"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/review_list_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/review_label"
                android:textColor="@color/black"
                android:textSize="22sp"/>
            <ListView
                android:id="@+id/review_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:layout_weight="1" >
            </ListView>
            <TextView
                android:id="@android:id/empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:text="@string/no_reviews" />

            <TextView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:textColor="@color/secondary"
                android:layout_gravity="end"
                android:visibility="invisible"
                android:textSize="14sp"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="#c0c0c0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="@color/secondary"
                    android:textSize="14sp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend"
                    android:textColor="@color/secondary"
                    android:textSize="14sp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report"
                    android:textColor="@color/secondary"
                    android:textSize="14sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>