<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="theateam.thriftify.EditMyProfile">


        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"/>

        <RelativeLayout
            android:id="@+id/picture_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.01"
            android:layout_below="@id/toolbar">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="165dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profile"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                app:srcCompat="@drawable/profile"/>

            <Button
                android:textColor="@color/white"
                android:id="@+id/user_edit_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/thumbnail"
                android:text="@string/upload_photo" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@id/picture_container"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:orientation="vertical">
            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/first_name_label"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSend"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/last_name_label"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:textIsSelectable="false"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/user_edit_save"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"/>
        </LinearLayout>



</RelativeLayout>
